--- a/templates/day_test.clj.hbs
+++ b/templates/day_test.clj.hbs
@@ -3,5 +3,5 @@
             [aoc-2022.helper :as h]))
 
 (h/defaoc-test [{{year}} {{day}}]
-  {{name}}/part-one 0
-  {{name}}/part-two 0)
+  {{name}}/part-one false
+  {{name}}/part-two false)
