day thirteen part one

--- a/scripts/templates/day.clj.hbs
+++ b/scripts/templates/day.clj.hbs
@@ -5,4 +5,4 @@
 
 (defn part-two [input] false)
 
-(h/aoc [{{year}} {{day}}] part-one part-two)
+(comment (h/aoc [{{year}} {{day}}] part-one part-two))
